Added new articles.

--- a/_posts/2013-05-26-about.md
+++ b/_posts/2013-05-26-about.md
@@ -9,7 +9,7 @@ tags:
 ---
 ![UnQLite](/img/logo.jpg)
 
-[UnQLite](http://unqlite.org/index.html)是，一个嵌入式C语言软件库，它实现了一个[自包含](http://unqlite.org/features.html#self_contained)、[无服务器](http://unqlite.org/features.html#serverless)、[零配置](http://unqlite.org/features.html#zero_conf)、[事务化的](http://unqlite.org/features.html#acid)NoSQL数据库引擎。`UnQLite`是一个__文档存储__数据库，类似于[MongoDB](http://mongodb.org/)、[Redis](http://redis.io/)、[CouchDB](http://couchdb.apache.org/)等。同时，也是一个标准的__Key/Value存储__，与[BerkeleyDB](http://www.oracle.com/technetwork/products/berkeleydb/overview/index.html)和[LevelDB](http://code.google.com/p/leveldb/)等类似。
+[UnQLite](http://unqlite.org/index.html)是，由[ Symisc Systems](http://www.symisc.net/)公司出品的一个嵌入式C语言软件库，它实现了一个[自包含](http://unqlite.org/features.html#self_contained)、[无服务器](http://unqlite.org/features.html#serverless)、[零配置](http://unqlite.org/features.html#zero_conf)、[事务化的](http://unqlite.org/features.html#acid)NoSQL数据库引擎。`UnQLite`是一个__文档存储__数据库，类似于[MongoDB](http://mongodb.org/)、[Redis](http://redis.io/)、[CouchDB](http://couchdb.apache.org/)等。同时，也是一个标准的__Key/Value存储__，与[BerkeleyDB](http://www.oracle.com/technetwork/products/berkeleydb/overview/index.html)和[LevelDB](http://code.google.com/p/leveldb/)等类似。
 
 UnQLite是一个`嵌入式`NoSQL（键/值存储和文档存储）数据库引擎。不同于其他绝大多数NoSQL数据库，UnQLite没有一个独立的服务器进程。UnQLite直接读/写普通的磁盘文件。包含多个数据集的一个完整的数据库，存储在[单一的磁盘文件](http://unqlite.org/features.html#single_file)中。数据库文件格式是跨平台的，可以在`32`位和`64`位系统或[大端](http://en.wikipedia.org/wiki/Endianness)和[小端](http://en.wikipedia.org/wiki/Endianness)架构之间，自由拷贝一个数据库。UnQLite的主要特点，如下：
 
@@ -59,57 +59,57 @@ UnQLite用来在数据库中存储JSON文档（如，对象、数组、字符串
 
 以下文档描述了，如何使用API进行UnQLite编程。UnQLite的学习成本很低，对于变成新手，也很容易学习。有用的链接，如下：
 
-### 5分钟玩转UnQLite
+### [5分钟玩转UnQLite](/2013/05/26/intro/index.html)
 
 这是一个非常初级的UnQLite编程指南，通过C语言实现的列子展开介绍。
 
-### UnQLite C/C++接口介绍
+### [UnQLite C/C++接口介绍](http://unqlite.org/api_intro.html)
 
 描绘了一个UnQLite C/C++编程接口的概览和路线图。
 
-### Jx9介绍
+### [Jx9介绍](http://unqlite.org/jx9.html)
 
 Jx9就是支撑UnQLite文档存储接口的嵌入式脚本语言。Jx9是一个图灵完备（Turing-Complete），基于JSON的，编程语言，作为UnQLite内核的一个库而存在。
 
-### C/C++ API参考指南
+### [C/C++ API参考指南](/2013/06/02/c_api/index.html)
 
 这个文档描述了每个API函数的具体细节。
 
-### UnQLite数据库引擎架构
+### [UnQLite数据库引擎架构](http://unqlite.org/arch.html)
 
 概括的介绍了UnQLite的上层构架和相关的接口。
 
-### 外部函数实现
+### [外部函数实现](http://unqlite.org/func_intro.html)
 
 这是一个howto指南，介绍如何创建和安装外部函数（一般为C/C++实现），以及如何通过Jx9脚本进行调用。
 
-### 常量扩展机制
+### [常量扩展机制](http://unqlite.org/const_intro.html)
 
 这是一个howto指南，介绍加载外部常量（一般为C/C++实现），以及如何通过Jx9脚本扩展其值。
 
 ## 其他有用的链接
 
-### 下载
+### [下载](http://unqlite.org/downloads.html)
 
 获取最新开放版本的UnQLite，开始嵌入，并享受编程的乐趣。
 
-### UnQLite特色
+### [UnQLite特色](/2013/06/01/features/index.html)
 
 这个文档枚举，并介绍了UnQLite的一些特色和扩展，以及数据库模型相关的Jx9编程语言。
 
-### 常问问题
+### [常问问题](http://unqlite.org/faq.html)
 
 FAQ: 这个标题不言自明……
 
-### 赞助程序
+### [赞助程序](http://unqlite.org/sponsorship.html)
 
 UnQLite赞助程序，专门用于确保UnQLite持续不断的活力。UnQLite是高质量、开源软件。赞助程序的目标就是，确保其一直保持这样的良好状态。
 
-### 使用许可/版权
+### [使用许可/版权](http://unqlite.org/sponsorship.html)
 	
 UnQLite是，一个开源产品。 这里有更多版权相关信息。
 
-## 在线社区支持
+## [在线社区支持](http://unqlite.org/support.html)
 
 如需帮助，请加入UnQLite在线社区。
 
