Fixed some typos.

--- a/_posts/2013-06-02-c_api.md
+++ b/_posts/2013-06-02-c_api.md
@@ -10,7 +10,7 @@ tags:
 ---
 ![UnQLite](/img/logo.jpg)
 
-这个页面定义UnQLite的C语言接口
+这个页面定义UnQLite的C语言接口。
 
 这不是一个教程。这些页面都是精准的设计。不易阅读。
 
@@ -20,17 +20,17 @@ tags:
 
 本接口分为以下三类：
 
-1. [对象列表](http://unqlite.org/c_api_object.html)
+1、[对象列表](http://unqlite.org/c_api_object.html)
 
 这是一个UnQLite库使用的所有`抽象对象`和`数据类型`的列表。这总共包括11个导出对象，	其中最重要的两个是：
 (1)、__数据库句柄，代表了unqlite不透明的指针。__
 (2)、__虚拟机对象，Jx9脚本成功汇编的结果，代表了unqlite_vm不透明的指针__
 
-2. [常量列表](http://unqlite.org/c_api_const.html)
+2、[常量列表](http://unqlite.org/c_api_const.html)
 
 这个列表包括了UnQLite使用的，在`unqlite.h`头文件中用`#defines`定义的所有数字常量。这些常量包括了，比如各种接口函数返回值（如，UNQLITE\_OK、UNQLITE\_NOTFOUND和UNQLITE\_BUSY等）。同时，还讨论了`编译时指令`，如`UNQLITE_ENBALE_THREADS`。
 
-3. [函数列表](http://unqlite.org/c_api_func.html)
+3、[函数列表](http://unqlite.org/c_api_func.html)
 
 这个列表包括了对象上所有函数和方法操作，使用与/或（and/or）返回常量。虽然这里罗列非常多的函数，绝大多数应用只用其中的一小部分。
 
