Added new articles.

--- a/_posts/2013-05-26-intro.md
+++ b/_posts/2013-05-26-intro.md
@@ -7,7 +7,8 @@ categories:
 tags:
   - UnQLite
 ---
-![UnQLite](/img/logo.jpg)
+
+[![UnQLite](/img/logo.jpg)](http://www.symisc.net/)
 
 这就是上手[UnQLite](http://unqlite.org/)数据库引擎指南，不需要做大量乏味的阅读和配置：
 
