--- a/_posts/2013-06-01-features.md
+++ b/_posts/2013-06-01-features.md
@@ -7,7 +7,8 @@ categories:
 tags:
   - UnQLite
 ---
-![UnQLite](/img/logo.jpg)
+
+[![UnQLite](/img/logo.jpg)](http://www.symisc.net/)
 
 以下页面枚举`UnQLite数据库引擎`和J`x9嵌入式脚本语言`的鲜明特色。
 
