--- a/_posts/2013-06-02-c_api.md
+++ b/_posts/2013-06-02-c_api.md
@@ -8,7 +8,8 @@ tags:
   - UnQLite
   - API
 ---
-![UnQLite](/img/logo.jpg)
+
+[![UnQLite](/img/logo.jpg)](http://www.symisc.net/)
 
 这个页面定义UnQLite的C语言接口。
 
@@ -26,9 +27,9 @@ tags:
 (1)、__数据库句柄，代表了unqlite不透明的指针。__
 (2)、__虚拟机对象，Jx9脚本成功汇编的结果，代表了unqlite_vm不透明的指针__
 
-2、[常量列表](http://unqlite.org/c_api_const.html)
+2、[常量列表](/2013/06/02/c_api_const/index.html)
 
-这个列表包括了UnQLite使用的，在`unqlite.h`头文件中用`#defines`定义的所有数字常量。这些常量包括了，比如各种接口函数返回值（如，UNQLITE\_OK、UNQLITE\_NOTFOUND和UNQLITE\_BUSY等）。同时，还讨论了`编译时指令`，如`UNQLITE_ENBALE_THREADS`。
+这个列表包括了UnQLite使用的，在`unqlite.h`头文件中用`#defines`定义的所有数字常量。这些常量包括了，比如各种接口函数返回参数（如，UNQLITE\_OK、UNQLITE\_NOTFOUND和UNQLITE\_BUSY等）。同时，还讨论了`编译时指令`，如`UNQLITE_ENBALE_THREADS`。
 
 3、[函数列表](http://unqlite.org/c_api_func.html)
 
