--- a/_posts/2013-05-26-about.md
+++ b/_posts/2013-05-26-about.md
@@ -7,7 +7,8 @@ categories:
 tags:
   - UnQLite
 ---
-![UnQLite](/img/logo.jpg)
+
+[![UnQLite](/img/logo.jpg)](http://www.symisc.net/)
 
 [UnQLite](http://unqlite.org/index.html)是，由[ Symisc Systems](http://www.symisc.net/)公司出品的一个嵌入式C语言软件库，它实现了一个[自包含](http://unqlite.org/features.html#self_contained)、[无服务器](http://unqlite.org/features.html#serverless)、[零配置](http://unqlite.org/features.html#zero_conf)、[事务化的](http://unqlite.org/features.html#acid)NoSQL数据库引擎。`UnQLite`是一个__文档存储__数据库，类似于[MongoDB](http://mongodb.org/)、[Redis](http://redis.io/)、[CouchDB](http://couchdb.apache.org/)等。同时，也是一个标准的__Key/Value存储__，与[BerkeleyDB](http://www.oracle.com/technetwork/products/berkeleydb/overview/index.html)和[LevelDB](http://code.google.com/p/leveldb/)等类似。
 
